# poetry2nix-debugging-testing

./: pyproject.toml  shell.nix
test/: setup.py
