[tool.poetry]
name = "test"
version = "0.1.0"
description = "testing dvc dependency"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# dvc = {extras = ["s3"], version = "^2.10.0"}

[tool.poetry.dev-dependencies]
ipykernel = "==6.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
